# smart_watch

./: README.md
SquareLine/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
SquareLine/autosave/: SquareLine_Project.spj
智能手环/CORE/: startup_stm32f40_41xxx.s
智能手环/FREERTOS/include/: FreeRTOS.h  (+1 more)
智能手环/LVGL/: lv_conf.h  lv_conf.h~RF11016cbe.TMP  lv_conf.h~RF14d2a8fc.TMP  lv_conf.h~RF1cdd55e.TMP  lv_conf.h~RF1d75810.TMP  lv_conf.h~RF2112e719.TMP  lv_conf.h~RF831a6b7.TMP  lv_conf.h~RFbe53e56.TMP  lvgl.h
智能手环/LVGL/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
智能手环/LVGL/ui/components/: ui_comp_hook.c
智能手环/LVGL/ui/images/: ui_img_1576808831.c  ui_img_bluetooth_png.c  ui_img_calorie_png.c  ui_img_drop_png.c  ui_img_heart_png.c  ui_img_mriai_png.c  ui_img_oxysatura_png.c  ui_img_shoudian_png.c  ui_img_sleep.c  ui_img_step_png.c  ui_img_temperature_png.c  ui_img_timer_png.c  ui_img_tired_png.c  ui_img_wave1_png.c  ui_img_wave2_png.c
智能手环/LVGL/ui/screens/: ui_LightScreen.c  ui_MainScreen.c  ui_Screen1.c  ui_SleepScreen.c  ui_StepScreen.c  ui_heartScreen.c  ui_img_sleep_png.c
智能手环/PIC/: pic_logo.c  pic_logo.h
智能手环/PROJECT/: JLinkLog.txt  demo.uvguix.Admin  demo.uvguix.Administrator  demo.uvguix.steph  demo.uvguix.wen  demo.uvguix.yuan  demo.uvoptx  demo.uvprojx
智能手环/TASK/: Max301.c  TemHum.c  bluetoorhTask.c  detectionAngle.c  runmode.c  runmodeTask.h  screenControls.c  sleepmode.c  sleepmode.h  step.c
智能手环/USER/: includes.h  main.c  stm32f4xx_it.c  system_stm32f4xx.c
硬件连接/: 血氧模块max30102.txt
(+47 files in other folders)
